--- a/public/popup.html
+++ b/public/popup.html
@@ -4,6 +4,23 @@
     <!--<link rel="stylesheet" href="button.css">-->
   </head>
   <body>
-    <h3>Hello World</h3>
+    <form>
+      <label for="fname">First name:</label>
+      <input type="text" id="fname" name="fname"></input>
+
+      <label for="lname">Last name:</label>
+      <input type="text" id="lname" name="lname"></input>
+
+      <label for="fname">Email:</label>
+      <input type="email" id="email" name="email"></input>
+
+      <label for="telephone">Telephone:</label>
+      <input type="text" id="telephone" name="telephone"></input>
+
+      <label for="linkedin">Linkedin:</label>
+      <input type="text" id="linkedin" name="linkedin"></input>
+      
+      <input type="submit" value="Submit">
+    </form>
   </body>
 </html>
