(+) popup.ts (+) popup.ts entry config for webpack.config.js (+) Added event handler for submit button

--- a/public/popup.html
+++ b/public/popup.html
@@ -4,7 +4,7 @@
     <!--<link rel="stylesheet" href="button.css">-->
   </head>
   <body>
-    <form>
+    <form id="infoForm">
       <label for="fname">First name:</label>
       <input type="text" id="fname" name="fname"></input>
 
@@ -20,7 +20,8 @@
       <label for="linkedin">Linkedin:</label>
       <input type="text" id="linkedin" name="linkedin"></input>
       
-      <input type="submit" value="Submit">
+      <input type="submit" value="Submit" id="submit">
     </form>
   </body>
+  <script src="popup.js"></script>
 </html>
