--- a/public/popup.html
+++ b/public/popup.html
@@ -11,7 +11,7 @@
       <label for="lname">Last name:</label>
       <input type="text" id="lname" name="lname"></input>
 
-      <label for="fname">Email:</label>
+      <label for="email">Email:</label>
       <input type="email" id="email" name="email"></input>
 
       <label for="telephone">Telephone:</label>
