added comments and reorganized some code

--- a/public/popup.html
+++ b/public/popup.html
@@ -27,7 +27,7 @@
           <label for="linkedin">Linkedin:</label>
           <input type="text" id="linkedin" name="linkedin"></input>
         </div>
-        <input type="submit" value="Submit" id="submit">
+        <input type="submit" value="save" id="submit">
       </form>
     </div>
   </body>
